# tune

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yaml  linux.yaml  mac.yaml.disable  windows.yaml
app/: CMakeLists.txt
app/include/app/: App.h
app/include/ui/: Component.h  Dispatcher.h  RootState.h  WindowManager.h  imgui_ext.h
app/src/: App.cpp  Dispatcher.cpp  TestWindow.cpp  test.cpp
app/src/components/: Component.h
app/src/components/immediate/: RoundGauge.cpp  imgui_ext.h
app/src/components/retained/: AnalogGauge.cpp  Button.cpp  ChannelText.cpp  Separator.cpp  Slider.cpp  StackPanel.cpp  TextBlock.cpp  TextInput.cpp  Window.cpp
app/src/dispatcher/: Dispatcher.cpp  Dispatcher.h
app/src/nav/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
app/src/state/: RootState.cpp  RootState.h
app/src/windows/: TestWindows.h
lib/ecu/: CMakeLists.txt
lib/ecu/include/ecu/: Ecu.h  IOutputChannel.h  OutputChannel.h
lib/ecu/include/util/: Span.h
lib/ecu/src/: CMakeLists.txt  Ecu.cpp  Ecu.h  EcuInit.cpp  FakeEcu.cpp  FakeEcu.h  OutputChannel.h  OutputChannelParser.cpp  Span.h
lib/ecu/src/channels/: FakeOutputChannel.cpp  FakeOutputChannel.h  OutputChannel.h  OutputChannelParser.cpp  OutputChannelParser.h
lib/ecu/src/interface/: EcuInterface.h  TunerstudioProtocol.cpp  TunerstudioProtocol.h  TunerstudioTransport.cpp
lib/ecu/src/pal/include/: SerialPort.h
lib/ecu/src/pal/linux/: LinuxSerialPort.cpp
lib/ecu/src/pal/mac/: MacSerialPort.cpp
lib/ecu/src/pal/unix/: UnixSerialPortBase.h
lib/ecu/src/pal/windows/: WindowsSerialPort.cpp
lib/ecu/test/: CMakeLists.txt  TestOutputChannel.cpp
lib/imgui/: CMakeLists.txt
main/: CMakeLists.txt  dummy.cpp
main/dx9/: CMakeLists.txt
main/linux/: CMakeLists.txt  main.cpp
main/opengl/: CMakeLists.txt
main/osx/: CMakeLists.txt  main.mm
main/windows/: CMakeLists.txt  main.cpp
main/windows_common/: CMakeLists.txt
main/windows_dx12/: CMakeLists.txt  main.cpp
main/windows_dx9/: CMakeLists.txt  main.cpp
