add_executable(main)
target_sources(main PRIVATE dummy.cpp)

if (WIN32)
    add_subdirectory(windows_common)
#    add_subdirectory(windows_dx9)
#    target_link_libraries(main main_windows_dx9)
    add_subdirectory(windows_dx12)
    target_link_libraries(main main_windows_dx12)
elseif (APPLE)
    add_subdirectory(osx)
    add_subdirectory(opengl)
    target_link_libraries(main main_osx)
endif()
